<resources>

    <string name="app_name">AQueryDemo</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">AQueryDemo</string>
    <!-- Lorem Ipsum -->
    <string name="text_preview">Europe\'s Leaders Fear Libya Could Become Next Afghanistan</string>
    <string name="date_preview">March 29th, 2010. 09:34 AM</string>
    
	<!-- Content Descriptions  -->
    <string name="thumbnail_alt">feed item thumbnail</string>
    <string name="mainimage_alt">feed item main image</string>
    <string name="thumbnail_progress_alt">thumbnail image loading animation</string>
	
</resources>