<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="75dip" >
 
    <ImageView
        android:id="@+id/feed_thumbnail"
        android:layout_width="75dip"
        android:layout_height="75dip"
        android:contentDescription="@string/thumbnail_alt"
         />
        
	<TextView
	    android:id="@+id/feed_title"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignWithParentIfMissing="true"
	    android:layout_toRightOf="@id/feed_thumbnail"
	    android:maxLines="2"
	    android:paddingLeft="6dip"
	    android:paddingRight="6dip"
	    android:paddingTop="6dip"
	    android:text="@string/text_preview"
	    android:textSize="15sp"
	    android:textStyle="bold" />

	<TextView
	    android:id="@+id/feed_date"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/feed_title"
		android:layout_toRightOf="@id/feed_thumbnail"
	    android:paddingLeft="6dip"
	    android:text="@string/date_preview" />

</RelativeLayout>